Readability fixes for menu hover.

--- a/sites/all/themes/iyinj/nice-menus.css
+++ b/sites/all/themes/iyinj/nice-menus.css
@@ -16,7 +16,7 @@
 .nice-menu-main-menu li ul {
   padding: 10px 0 0 0;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.25);
+  background-color: rgba(0,0,0,0.5);
 }
 
 .nice-menu-main-menu li ul li {
@@ -36,4 +36,12 @@
 .nice-menu-main-menu a.active,
 .nice-menu-main-menu a:hover {
   color: #C05505;
+}
+
+.nice-menu-main-menu li ul li a:link {
+  color: #f3f3f3;
+}
+
+.nice-menu-main-menu li ul li a:hover {
+  color: #fff;
 }
